--- a/app/src/main/res/layout/list_item_staggered.xml
+++ b/app/src/main/res/layout/list_item_staggered.xml
@@ -36,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/image_parentlayout"
+            android:background="@color/white"
 
             >
 
