--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
             <item name="android:textColorPrimary">@color/myTextPrimaryColor</item>
             <item name="android:navigationBarColor">@color/ColorPrimary</item>
             <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+            <item name="alertDialogTheme">@style/AppCompatAlertDialogStyle</item>
 
 
             <item name="android:windowBackground">@color/myWindowBackground</item>
@@ -19,11 +20,17 @@
             <item name="color">@android:color/white</item>
         </style>
 
-        <style name="ToolBarStyle" parent="">
-            <item name="android:elevation">@dimen/toolbar_elevation</item>
-            <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-            <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
-        </style>
+    <style name="ToolBarStyle" parent="">
+        <item name="android:elevation">@dimen/toolbar_elevation</item>
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    </style>
+
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/ColorPrimary</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:background">#FFFFFF</item>
+    </style>
 
     <style name = "NoActionBar" parent = "Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimaryDark">@color/ColorPrimaryDark</item>
