--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -77,8 +77,37 @@
         android:layout_width="match_parent"
         android:clickable="true"
         android:scrollbars="vertical"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/myDrawerBackground"
-        android:layout_below="@+id/separator" />
+        android:layout_below="@+id/separator"
+        android:layout_marginBottom="8dp"
+        />
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/ColorPrimaryDark"
+        android:id="@+id/navigationfooter"
+        android:layout_alignParentBottom="true"
+        >
+
+            <TextView android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/drawer_feedback_text"
+                android:text="FEEDBACK"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:textColor="@color/white"
+                android:gravity="center_horizontal|center_vertical"
+                android:focusable="true"
+                android:clickable="true"
+                android:background="?android:attr/selectableItemBackground"
+                />
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
