--- a/app/src/main/res/layout/location_dialog.xml
+++ b/app/src/main/res/layout/location_dialog.xml
@@ -7,79 +7,129 @@
     android:paddingRight="24dp"
     android:paddingTop="20dp"
     android:paddingBottom="8dp"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     >
 
-    <TextView
+    <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Good"
-        android:textColor="#80000000"
-        android:textSize="@dimen/customTitle" />
+        android:text="Zip/Postal Code"
+        android:id="@+id/radioButton_postalCode"
+        android:layout_gravity="left"
+        android:textSize="@dimen/customEntry"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Good"
-        android:textColor="#000000"
-        android:textSize="@dimen/customEntry" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="SSID"
-        android:textColor="#80000000"
-        android:textSize="@dimen/customTitle" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="ABC"
-        android:textColor="#000000"
-        android:textSize="@dimen/customEntry" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="Security"
-        android:textColor="#80000000"
-        android:textSize="@dimen/customTitle" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="SecurityType"
-        android:textColor="#000000"
-        android:textSize="@dimen/customEntry" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="Password"
-        android:textColor="#80000000"
-        android:textSize="@dimen/customTitle" />
-
-    <EditText
-        android:id="@+id/password"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:inputType="textPassword"
-        android:textColor="#000000"
-        android:textSize="@dimen/customEntry" />
+        android:id="@+id/dialog_postalCode"
+        android:layout_marginBottom="8dp"
+        >
+        <EditText
 
-    <CheckBox
-        android:id="@+id/showPassword"
+            android:id="@+id/dialog_postalCode_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textCapCharacters"
+            android:hint="example: H3X2A1"
+            android:maxLength="6"
+            />
+    </android.support.design.widget.TextInputLayout>
+
+
+    <TextView
+        android:id="@+id/dialog_radius_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="ShowPassword"
-        android:textColor="#000000"
-        android:textSize="@dimen/customEntry" />
+        android:text="Radius Within"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        />
+
+    <SeekBar
+        android:id="@+id/dialog_seekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="3"
+        android:layout_marginTop="8dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/dialog_seekbar_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="8dp"
+        >
+        <TextView
+            android:id="@+id/dialog_seekbar_25km"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="25km"
+            android:gravity="left"
+            android:focusable="true"
+            android:clickable="true"
+            />
+        <TextView
+            android:id="@+id/dialog_seekbar_50km"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="50km"
+            android:gravity="center"
+            android:focusable="true"
+            android:clickable="true"
+            />
+        <TextView
+            android:id="@+id/dialog_seekbar_75km"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="75km"
+            android:gravity="center"
+            android:focusable="true"
+            android:clickable="true"
+            />
+        <TextView
+            android:id="@+id/dialog_seekbar_100km"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="100km"
+            android:gravity="right"
+            android:focusable="true"
+            android:clickable="true"
+            />
+    </LinearLayout>
+
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location Service"
+        android:id="@+id/radioButton_locService"
+        android:layout_gravity="left"
+        android:textSize="@dimen/customEntry"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+
+        />
+
+    <TextView
+        android:id="@+id/dialog_loc_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Using the build-in location service.\n(Will direct you to Location Setting)"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+
+
+        />
+
+
 
 </LinearLayout>
