--- a/app/src/main/res/layout/marketplace_header.xml
+++ b/app/src/main/res/layout/marketplace_header.xml
@@ -8,15 +8,22 @@
     android:focusable="true"
     android:clickable="true"
     android:background="?android:attr/selectableItemBackground"
+
     >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
+
 
     <ImageView
         android:id="@+id/marketplace_header_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_fab_primary"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/marketplace_header_loc"
 
 
 
@@ -27,9 +34,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:paddingRight="8dp"
+        android:layout_gravity="center_vertical"
 
         />
+
+    <TextView
+        android:id="@+id/marketplace_header_rad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+
+
+        />
+    </LinearLayout>
+
 
 </RelativeLayout>
