--- a/app/src/main/res/layout/activity_listing_process.xml
+++ b/app/src/main/res/layout/activity_listing_process.xml
@@ -5,9 +5,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@color/lightgrey"
     >
+
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/toolbar_default">
+    </include>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -120,45 +125,69 @@
                     android:layout_below="@id/section2_img"
                     />
 
-                <HorizontalScrollView
-                    android:id="@+id/section2_scroll"
+                <LinearLayout
+                    android:id="@+id/section2_imgs_container"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_below="@+id/section2_scroll_top_div"
-
+                    android:orientation="horizontal"
                     >
 
-                    <org.apmem.tools.layouts.FlowLayout
+
+
+                    <ImageView
+                        android:id="@+id/section2_item_img1"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_section2_camera"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:scaleType="centerCrop"
+                        />
 
+                    <ImageView
+                        android:id="@+id/section2_item_img2"
 
-                        <ImageView
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/ic_section2_camera"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_section2_camera"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:scaleType="centerCrop"
 
-                            />
-                        <ImageView
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/ic_section2_camera"
-                            />
-                        <ImageView
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/ic_section2_camera"
-                            />
+                        />
 
-                    </org.apmem.tools.layouts.FlowLayout>
-                </HorizontalScrollView>
+                    <ImageView
+                        android:id="@+id/section2_item_img3"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_section2_camera"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:scaleType="centerCrop"
+
+                        />
+                    <ImageView
+                        android:id="@+id/section2_item_img4"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_section2_camera"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:scaleType="centerCrop"
+
+                        />
+
+                </LinearLayout>
 
                 <View
                     android:id="@+id/section2_scroll_bottom_div"
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
                     android:background="@color/black"
-                    android:layout_below="@+id/section2_scroll"
+                    android:layout_below="@+id/section2_imgs_container"
                     android:layout_marginBottom="8dp"
                     />
 
