--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
             <item name="android:navigationBarColor">@color/ColorPrimary</item>
             <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
             <item name="alertDialogTheme">@style/AppCompatAlertDialogStyle</item>
-
+            <item name="android:screenOrientation">portrait</item>
 
             <item name="android:windowBackground">@color/myWindowBackground</item>
             <item name="android:windowContentTransitions">true</item>
