Updates: - Changing MarketPlace UI to match psd file. - Changing Navigation Drawer logic. - Deleted unused files.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
 
         <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
             <item name="spinBars">true</item>
-            <item name="color">@android:color/white</item>
+            <item name="color">@android:color/darker_gray</item>
         </style>
 
     <style name="ToolBarStyle" parent="">
