--- a/app/src/main/res/layout/marketplace_header.xml
+++ b/app/src/main/res/layout/marketplace_header.xml
@@ -5,25 +5,26 @@
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:focusable="true"
-    android:clickable="true"
-    android:background="?android:attr/selectableItemBackground"
-
+    android:background="@color/ColorPrimary"
     >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+
         >
 
 
     <ImageView
         android:id="@+id/marketplace_header_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_fab_primary"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/location_icon"
 
 
 
@@ -34,8 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location"
+        android:textColor="@color/white"
         android:paddingRight="8dp"
         android:layout_gravity="center_vertical"
+        android:textSize="18sp"
+
 
         />
 
@@ -43,7 +47,10 @@
         android:id="@+id/marketplace_header_rad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:layout_gravity="center_vertical"
+
 
 
         />
