--- a/app/src/main/res/layout/notification_offer.xml
+++ b/app/src/main/res/layout/notification_offer.xml
@@ -8,7 +8,7 @@
 
 
     <LinearLayout
-        android:id="@+id/noti_offer_myitem_bar"
+        android:id="@+id/noti_offer_myItem_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -26,15 +26,18 @@
             android:layout_height="wrap_content"
             android:text="MY ITEM: "
             android:textSize="12sp"
+            android:layout_gravity="center_vertical"
 
             />
         
         <TextView
+            android:id="@+id/noti_offer_myItem_placeholder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sample Item Title"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:layout_gravity="center_vertical"
             />
     </LinearLayout>
 
@@ -49,11 +52,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
-        android:layout_below="@+id/noti_offer_myitem_bar"
+        android:layout_below="@+id/noti_offer_myItem_bar"
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/noti_offer_user_img"
+            android:id="@+id/noti_offer_userImg_placeholder"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:src="@drawable/sample_img2"
@@ -68,6 +71,7 @@
             android:layout_marginLeft="16dp">
 
             <TextView
+                android:id="@+id/noti_offer_userName_placeholder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Username"
@@ -89,6 +93,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/noti_offer_itemOffer_placeholder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="An Item"
@@ -120,6 +125,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/noti_offer_extraCash_Placeholder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="$20 CAD"
@@ -147,7 +153,7 @@
         />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/noti_offer_viewPager_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/noti_offer_swipe_text"
@@ -159,7 +165,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dots"
-        android:layout_alignBottom="@+id/pager"
+        android:layout_alignBottom="@+id/noti_offer_viewPager_placeholder"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:paddingBottom="4dp"
