--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -8,6 +8,7 @@
     <color name="ColorPrimaryDark">#2CA88C</color>
     <color name="tabsScrollColor">#1193C3</color>
     <color name="white">#FFFFFF</color>
+    <color name="darkwhite">#99D3D3D3</color>
     <color name="darkgrey">#80D3D3D3</color>
     <color name="lightgrey">#80F5F5F5</color>
     <color name="blue_fab_primary">#33b5e5</color>
