--- a/app/src/main/res/layout/fragment_container.xml
+++ b/app/src/main/res/layout/fragment_container.xml
@@ -23,7 +23,6 @@
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar_actionbar">
@@ -31,7 +30,9 @@
         <FrameLayout android:id="@+id/container"
             android:layout_width="match_parent"
             android:clickable="true"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            />
 
         <!-- android:layout_marginTop="?android:attr/actionBarSize"-->
 
