--- a/app/src/main/res/layout/list_item_staggered.xml
+++ b/app/src/main/res/layout/list_item_staggered.xml
@@ -127,20 +127,6 @@
                 />
     </LinearLayout>
 
-
-            <!--
-    <View
-        android:id="@+id/divider_view"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#ccc"
-        android:layout_below="@+id/pro_bar"
-
-
-        />
-
-        -->
-
             <TextView
                 android:id="@+id/item_title"
                 android:layout_width="match_parent"
@@ -153,7 +139,10 @@
                 android:textStyle="bold"
                 android:text="Title Line 1\nTitle Line 2"
                 android:minLines="2"
-                android:layout_below="@+id/pro_bar"/>
+                android:maxLines="2"
+                android:layout_below="@+id/pro_bar"
+                android:ellipsize="end"
+            />
 
             <TextView
                 android:id="@+id/looking_for"
@@ -168,22 +157,21 @@
                 android:layout_below="@+id/item_title"
                 />
 
+            <org.apmem.tools.layouts.FlowLayout
+                xmlns:f="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/marketplace_tags_layout"
+                android:orientation="horizontal"
+                f:layoutDirection="ltr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/looking_for"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                >
 
-
-
-
+            </org.apmem.tools.layouts.FlowLayout>
 
         </RelativeLayout>
-
-
-
-
-
-
-
-</android.support.v7.widget.CardView>
-
-
-
+    </android.support.v7.widget.CardView>
 </LinearLayout>
 
