--- a/app/src/main/res/drawable/tag_btn_shape.xml
+++ b/app/src/main/res/drawable/tag_btn_shape.xml
@@ -11,5 +11,12 @@
         android:topLeftRadius="2dp"
         />
 
+    <padding
+        android:right="4dp"
+        android:bottom="4dp"
+        android:left="4dp"
+        android:top="4dp"
+        />
+
 
 </shape>
