--- a/app/src/main/res/layout/fragment_marketplace.xml
+++ b/app/src/main/res/layout/fragment_marketplace.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     >
 
+    <!--
     <include
         android:layout_alignParentTop="true"
         android:id="@+id/marketplace_header"
@@ -12,13 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
     />
+    -->
 
     <LinearLayout
+        android:id="@+id/recylcerview_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:layout_below="@+id/marketplace_header"
     >
 
 
@@ -26,7 +28,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/activity_main_swipe_refresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
 
 
@@ -39,23 +41,6 @@
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-
-        <!--
-        <com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-            -->
-
-
-<!--
-<com.etsy.android.grid.StaggeredGridView
-    android:id="@+id/grid_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:item_margin="8dp"
-    app:column_count="2" />
-  -->
     </LinearLayout>
 
 
@@ -72,5 +57,15 @@
         fab:fab_colorPressed="@color/ColorPrimaryDark"
 
     />
+
+
+    <include
+        android:id="@+id/marketplace_header"
+        layout="@layout/marketplace_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/recylcerview_layout"
+        />
 
 </RelativeLayout>
