--- a/app/src/main/res/layout/single_listing_header.xml
+++ b/app/src/main/res/layout/single_listing_header.xml
@@ -22,6 +22,8 @@
         android:layout_height="match_parent"
         android:text="Username"
         android:gravity="center_vertical"
+        android:textSize="18sp"
+        android:ellipsize="end"
         />
 
     <TextView
@@ -30,6 +32,7 @@
         android:layout_height="match_parent"
         android:text="two hours ago"
         android:gravity="center_vertical|right"
+        android:textSize="12sp"
         />
 
 
