Update: - added ProfileActivity with sample feedback UI

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -64,6 +64,8 @@
             android:singleLine="false"
             android:inputType="textShortMessage"
             android:imeOptions="actionSend"
+            android:windowSoftInputMode="stateHidden"
+            android:focusable="false"
             />
 
         <Button
