--- a/app/src/main/res/layout/fragment_offer_process_main.xml
+++ b/app/src/main/res/layout/fragment_offer_process_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/offer_parent_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkgrey"
+        android:background="@color/lightgrey"
         >
 
         <RelativeLayout
