--- a/app/src/main/res/layout/single_listing_header.xml
+++ b/app/src/main/res/layout/single_listing_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:background="@color/lightgrey"
+    android:background="@color/grey"
     >
 
     <ImageView
