--- a/app/src/main/res/layout/fragment_container.xml
+++ b/app/src/main/res/layout/fragment_container.xml
@@ -3,10 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View android:layout_width="match_parent"
+        android:background="@color/black"
+        android:layout_height="1dp"
+        android:id="@+id/separator"
+        android:layout_above="@+id/toolbar_frame_container"
+        />
+
     <include android:id="@+id/toolbar_actionbar"
         layout="@layout/toolbar_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+
 
     <FrameLayout
         android:id="@+id/toolbar_frame_container"
