--- a/app/src/main/res/layout/activity_offer_process.xml
+++ b/app/src/main/res/layout/activity_offer_process.xml
@@ -1,11 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
+    >
 
     <include android:id="@+id/toolbar_actionbar"
         layout="@layout/toolbar_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <View android:layout_width="match_parent"
+        android:background="@color/black"
+        android:layout_height="1dp"
+        android:id="@+id/separator"
+        android:layout_above="@+id/container"
+        />
 
     <FrameLayout
         android:id="@+id/container"
