--- a/app/src/main/res/layout/activity_single_listing_view.xml
+++ b/app/src/main/res/layout/activity_single_listing_view.xml
@@ -4,15 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <include
         android:id="@+id/tool_bar"
         layout="@layout/toolbar_default">
     </include>
 
+
+    <View android:layout_width="match_parent"
+        android:background="@color/black"
+        android:layout_height="1dp"
+        android:id="@+id/separator"
+        android:layout_above="@+id/single_listing_header"
+        />
+
     <include
         layout="@layout/single_listing_header"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:id="@+id/single_listing_header"
         android:layout_below="@+id/tool_bar"
         />
