--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     android:id="@+id/chat_rootView"
     android:clickable="true"
-
-
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     >
 
 
@@ -64,8 +64,6 @@
             android:singleLine="false"
             android:inputType="textShortMessage"
             android:imeOptions="actionSend"
-            android:windowSoftInputMode="stateHidden"
-            android:focusable="false"
             />
 
         <Button
