--- a/app/src/main/res/layout/list_item_staggered.xml
+++ b/app/src/main/res/layout/list_item_staggered.xml
@@ -4,17 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/darkwhite"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
     >
-
-    <!--
-    <com.etsy.android.grid.util.DynamicHeightImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        />
-       -->
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -22,9 +17,10 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
         card_view:cardUseCompatPadding="true"
+        card_view:cardCornerRadius="2dp"
         android:background="@color/white"
+
 
         >
 
@@ -164,6 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/looking_for"
                 android:layout_marginLeft="8dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginBottom="8dp"
                 >
 
