--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,8 +30,18 @@
         <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
             <item name="colorAccent">@color/ColorPrimary</item>
             <item name="android:textColorPrimary">@color/black</item>
-            <item name="android:background">#FFFFFF</item>
+            <item name="android:background">@color/white</item>
+            <item name="android:radius">8dp</item>
         </style>
+
+        <style name="AppCompatAlertDialogStyleFeedback" parent="Theme.AppCompat.Light.Dialog.Alert">
+            <item name="colorAccent">@color/ColorPrimary</item>
+            <item name="android:textColorPrimary">@color/ColorPrimary</item>
+            <item name="android:background">@color/white</item>
+            <item name="android:radius">8dp</item>
+        </style>
+
+
 
         <style name = "NoActionBar" parent = "Theme.AppCompat.Light.NoActionBar">
             <item name="colorPrimaryDark">@color/grey</item>
