--- a/app/src/main/res/layout/fragment_chatpage.xml
+++ b/app/src/main/res/layout/fragment_chatpage.xml
@@ -5,13 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <Model.EmptyRecyclerView
         android:id="@+id/chatpage_list"
         android:layout_width="match_parent"
         android:scrollbars="vertical"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/myDrawerBackground"
+
         />
+
+    <LinearLayout
+        android:id="@+id/chatpage_emptyView"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:background="@color/myDrawerBackground"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="You do not have an Offer"
+            android:textSize="24sp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="please note that the chat is only available when you send or receive an offer from/to other users."
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="14sp"
+
+            />
+    </LinearLayout>
 
 
 </LinearLayout>
