--- a/app/src/main/res/layout/marketplace_header.xml
+++ b/app/src/main/res/layout/marketplace_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:background="@drawable/feedback_btn_click_effect"
+    android:background="@drawable/shadow_effect"
     >
 
     <LinearLayout
@@ -36,7 +36,8 @@
         android:layout_height="wrap_content"
         android:text="Location"
         android:textColor="@color/white"
-        android:paddingRight="8dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:layout_gravity="center_vertical"
         android:textSize="18sp"
 
