--- a/app/src/main/res/layout/myoffers_pager_1.xml
+++ b/app/src/main/res/layout/myoffers_pager_1.xml
@@ -5,13 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <Model.EmptyRecyclerView
         android:id="@+id/myoffers_received"
         android:layout_width="match_parent"
         android:scrollbars="vertical"
         android:layout_height="match_parent"
         android:background="@color/myDrawerBackground"
         />
+
+    <LinearLayout
+        android:id="@+id/myoffers_received_emptyView"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:background="@color/myDrawerBackground"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="You Have Not Received Offer Yet"
+            android:textSize="24sp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            />
+    </LinearLayout>
+
 
 
 </LinearLayout>
